# tsujimoto

./: .gitignore  HIERCODE_HIGITA_COMPLETE.md  PROJECT_DIARY.md  README.md  RESEARCH.md  create_training_visualizations.py  model-card.md  plot_training_history.py  pyproject.toml
.github/workflows/: codeql.yml  lint.yml
docs/: RNN_DIFFERENCES.md
scripts/: convert_int8_pytorch_to_quantized_onnx.py  convert_to_gguf.py  convert_to_onnx.py  convert_to_safetensors.py  copy_best_checkpoint.py  create_class_mapping.py  create_dataset_metadata.py  example_safetensors_usage.py  export_4bit_quantized_onnx.py  export_quantized_to_onnx.py  export_to_onnx_hiercode.py  generate_chunk_metadata.py  generate_complete_class_mapping.py  generate_mapping.py  hiercode_higita_config.py  hiercode_higita_enhancement.py  inspect_onnx_model.py  load_multi_etl.py  measure_co2_emissions.py  onnx_operations_comparison.py  optimization_config.py  pooling_comparison.py  preflight_check.py  prepare_dataset.py  quantize_model.py  quantize_to_4bit_bitsandbytes.py  test_etl9g_setup.py  train.py  train_cnn_model.py  train_hiercode.py  train_hiercode_higita.py  train_qat.py  train_radical_rnn.py  train_rnn.py  train_vit.py  training_args.py  verify_etl9g_setup.py
src/: __init__.py
src/lib/: __init__.py  checkpoint.py  config.py  conversion.py  logging_utils.py  onnx.py  optimization.py  system.py  training.py
tests/: test_checkpoint_extended.py  test_checkpoint_manager.py  test_config_extended.py  test_conversion_scripts.py  test_hiercode_higita_config.py  test_logging_utils.py  test_model_architectures.py  test_optimization_config.py  test_prepare_dataset.py  test_rnn_training_integration.py  test_training_integration.py  test_training_scripts.py
